--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<head><script defer="defer" src="/portfolio-main/static/js/main.8cd37db3.js"></script><link href="/portfolio-main/static/css/main.2a9c10b9.css" rel="stylesheet"></head>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Portfolio</title><script defer="defer" src="/portfolio-main/static/js/main.5a1bef37.js"></script><link href="/portfolio-main/static/css/main.d2ccb2cf.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
